kian & blake page added

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
     <h2><strong>Or fill in the form below</strong></h2>
     <br>
     <!-- Contact us form-->
-    <form id="fcf-form-id" class="fcf-form-class" action="contact.php" method="POST">
+    <form id="fcf-form-id" class="fcf-form-class" method="POST">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Name *</label>
