--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                     <li>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </li>
+                    <li class="dropdown">
+                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Kids Page</a>
+                        <div class="dropdown-menu">
+                            <a href="blake.html" class="dropdown-item">Blake's Page</a>
+                            <a href="kian.html" class="dropdown-item">Kian's page</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -92,16 +99,17 @@
                 Sutton Electrical Services
             </div>
             <div class="card-body">
-                <h5 class="card-title">Friendly and reliable service</h5>
+                <h5 class="card-title"><strong>Friendly and reliable service</strong></h5>
                 <p class="card-text">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.<br><br>
-                Sutton electrical services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to a very high standard. Specialising in domestic services, and able to undertake all types of electrical work for you.
+                Sutton Electrical Services has been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to a very high standard. Specialising in domestic services, but able to undertake all types of electrical work for you.
                 <br><br>
                 <div class="container">
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header"><strong>
                                     Services include
+                                    </strong>
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">New builds</li>
@@ -210,14 +218,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <h6><strong>About Us</strong></h6>
+                <h6 class="footertitle"><strong>About Us</strong></h6>
                 <p class="text-justify">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.
                 <br><br>
-                Sutton electrical services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to a very high standard. Specialising in domestic services, and able to undertake all types of electrical work for you.<p>
+                Sutton Electrical Services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to the very highest standard. Specialising in domestic services, and able to undertake all types of electrical work for you.<p>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6><strong>Services</strong></h6>
+                <h6 class="footertitle"><strong>Services</strong></h6>
                     <ul class="footer-links">
                         <li><a href="services.html#domesticservices">Domestic Services</a></li>
                         <li><a href="services.html#corporateservices">Corporate Services</a></li>
@@ -226,7 +234,7 @@
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6><strong>Quick Links</strong></h6>
+                <h6 class="footertitle"><strong>Quick Links</strong></h6>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#aboutus">About Us</a></li>
