--- a/contact.html
+++ b/contact.html
@@ -8,36 +8,40 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+<title>Sutton Electrical Services</title>
 <script>
 function submitToAPI(e) {
        e.preventDefault();
-       var URL = "https://xpmmxyqsv2.execute-api.us-east-1.amazonaws.com/live";
+//       var URL = "API Gateway";
 
-            var Namere = /[A-Za-z]{1}[A-Za-z]/;
-            if (!Namere.test($("#Name").val())) {
-                         alert ("Name can not less than 2 char");
-                return;
-            }
-            var mobilere = /[0-9]{10}/;
-            if (!mobilere.test($("#Phone").val())) {
-                alert ("Please enter valid mobile number");
-                return;
-            }
-            if ($("#Email").val()=="") {
-                alert ("Please enter your email id");
-                return;
-            }
 
-            var reeamil = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,6})?$/;
-            if (!reeamil.test($("#Email").val())) {
-                alert ("Please enter valid email address");
-                return;
+       var name = document.getElementById("name").value;
+       var phone = document.getElementById("phone").value;
+       var email = document.getElementById("email").value;
+       var message = document.getElementById("message").message;
+	   if (name=="" || phone=="" || email=="" || message=="")
+        {
+            alert("Please Fill All Required Field");
+            return false;
+        }
+		
+		nameRE = /^[A-Z]{1}[a-z]{2,20}[ ]{1}[A-Z]{1}[a-z]{2,20}/;
+		if(!nameRE.test(name)) {
+			alert("Name entered, is not valid");
+				return false;
+		}
+		
+		phoneRE = /^([0|\+[0-9]{1,5})?([7-9][0-9]{9})$/;
+		if(!phoneRE.test(phone)) {
+				alert("Phone number entered, is not valid");
+				return false;
             }
-
-       var name = $("#Name").val();
-       var phone = $("#Phone").val();
-       var email = $("#Email").val();
-       var desc = $("#Message").val();
+		
+		emailRE = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+		if(!emailRE.test(email)) {
+			alert("Email Address entered, is not valid");
+				return false;
+		}
        var data = {
           name : name,
           phone : phone,
@@ -45,28 +49,26 @@ function submitToAPI(e) {
           message : message
         };
 
-       $.ajax({
-         type: "POST",
-         url : "https://xpmmxyqsv2.execute-api.us-east-1.amazonaws.com/live",
-         dataType: "json",
-         crossDomain: "true",
-         contentType: "application/json; charset=utf-8",
-         data: JSON.stringify(data),
-
-         
-         success: function () {
-           // clear form and show a success message
-           alert("Successfull");
-           document.getElementById("contact-form").reset();
-       location.reload();
-         },
-         error: function () {
-           // show an error message
-           alert("UnSuccessfull");
-         }});
-     }
-     </script>
-<title>Sutton Electrical Services</title>
+		var xmlhttp = new XMLHttpRequest();
+		xmlhttp.open("POST", "https://tf2d83mnm6.execute-api.us-east-1.amazonaws.com/prod/email");
+		xmlhttp.setRequestHeader("Content-Type", "application/json");
+		xmlhttp.send(JSON.stringify(data));
+		xmlhttp.onreadystatechange = function() {
+		if (xmlhttp.readyState === 4) {
+			var response = JSON.parse(xmlhttp.responseText);
+			if (xmlhttp.status === 200 ) {
+				console.log('successful');
+				document.getElementById("fcf-form-id").innerHTML = "<h1>Thank you for your message/feedback<br>our team will get back to you soon!</h1>";
+		    } else {
+			    console.log('failed');
+			}
+		}
+	}
+	
+	document.getElementById('fcf-form-id').reset();
+	  
+	} 
+</script>
 </head>
 
 <body>
@@ -160,28 +162,28 @@ function submitToAPI(e) {
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Name *</label>
             <div class="fcf-input-group">
-                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+                <input type="text" id="name" name="Name" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
             <label for="Email" class="fcf-label">Email *</label>
             <div class="fcf-input-group">
-                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+                <input type="email" id="email" name="Email" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
             <label for="Phone" class="fcf-label">Phone</label>
             <div class="fcf-input-group">
-                <input type="text" id="Phone" name="Phone" class="fcf-form-control">
+                <input type="text" id="phone" name="Phone" class="fcf-form-control">
             </div>
         </div>
 
         <div class="fcf-form-group">
             <label for="Message" class="fcf-label">Message *</label>
             <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+                <textarea id="Message" name="message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
             </div>
         </div>
         <div><small>* Required</small></div>
