kian page added

--- a/kian.html
+++ b/kian.html
@@ -38,33 +38,11 @@
                             <i class="fas fa-home"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="#aboutus" class="nav-item nav-link">About Us</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
-                        <div class="dropdown-menu">
-                            <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
-                            <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
-                            <a href="services.html#generalservices" class="dropdown-item">General services</a>
-                        </div>
-                    </li>
-                    <li class="dropdown">
-                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
-                        <div class="dropdown-menu">
-                            <a href="portfolio.html#job1" class="dropdown-item">Bundys job I did 1</a>
-                            <a href="portfolio.html#job2" class="dropdown-item">Bundys job I did 2</a>
-                            <a href="portfolio.html#job3" class="dropdown-item">Bundys job I did 3</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    </li>
                     <li class="dropdown">
                         <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Kids Page</a>
                         <div class="dropdown-menu">
-                            <a href="blake.html" class="dropdown-item">Blake's Page</a>
-                            <a href="kian.html" class="dropdown-item">Kian's page</a>
+                            <a href="blake.html" class="dropdown-item">Blakes Page</a>
+                            <a href="kian.html" class="dropdown-item">Kians page</a>
                         </div>
                     </li>
                 </ul>
@@ -72,40 +50,64 @@
         </div>
     </nav>
 
-    <div class="logo">
-        <img class="mx-auto d-block logo animate__animated animate__zoomIn" src="assets/images/bundylogo.jpg" width="300">
+    <div class="kidsheader">
+        <h1>
+        This is Kians website
+        </h1>
     </div>
 </header>
     
-<h1>This'll be Kian's page, I can add whatever you want here for fun but get rid of it before we send the site live</h1>
+<h1>This'll be Kians page, I can add whatever you want here for fun but get rid of it before we send the site live</h1>
+
+<div class="container cvnotice d-flex justify-content-center">
+    <div class="row">
+        <div class="col">
+            <p>
+                <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <i class="fas fa-shield-virus"></i>Kian, click me!
+                </button>
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body text-center">
+                    <strong>Do what your Mum Says!</strong>
+                    <ul class="list-group">
+                        <li class="list-group-item">Usually</li>
+                        <li class="list-group-item">But not always</li>
+                        <li class="list-group-item">Because sometimes you need to break the rules</li>
+                        <li class="list-group-item">But just not today!</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Site footer -->
 <footer class="site-footer mt-3 text-center">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <h6 class="footertitle"><strong>About Us</strong></h6>
-                <p class="text-justify">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.
+                <h6 class="footertitle"><strong>About Kian</strong></h6>
+                <p class="text-justify">Kian is a bit naughty usually!
                 <br><br>
-                Sutton Electrical Services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to the very highest standard. Specialising in domestic services, and able to undertake all types of electrical work for you.<p>
+                His Mum doesn't know why but Kian doesn't do what he's told a lot of the time. Why? Everyone in the family reckons it's because he's just a little bit naughty and takes the opportunity to bend the rules where he can.<p>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6 class="footertitle"><strong>Services</strong></h6>
+                <h6 class="footertitle"><strong>Kian Likes</strong></h6>
                     <ul class="footer-links">
-                        <li><a href="services.html#domesticservices">Domestic Services</a></li>
-                        <li><a href="services.html#corporateservices">Corporate Services</a></li>
-                        <li><a href="services.html#generalservices">General Services</a></li>
+                        <li><button class="colourbtn" id="redbtn">Red</button></li>
+                        <li><button class="colourbtn" id="bluebtn">Blue</button></li>
+                        <li><button class="colourbtn" id="greenbtn">Green</button></li>
+                        <li><button class="colourbtn" id="orangebtn">Orange</button></li>
                     </ul>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6 class="footertitle"><strong>Quick Links</strong></h6>
+                <h6 class="footertitle"><strong>Go To</strong></h6>
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#aboutus">About Us</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blake.html">Blake's page</a></li>
+                        <li><a href="kian.html">Kian's page</a></li>
                     </ul>
             </div>
         </div>
@@ -113,13 +115,31 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-sm-6 col-xs-12">
-                <p class="copyright-text"><small>Copyright &copy; 2021 All Rights Reserved by Stuart Cox</small></p>
+            <div class="col">
+                <figure>
+                    <figcaption class="mb-3">Want to play a fart sound? Click me!</figcaption>
+                    <audio
+                        controls
+                        src="assets/audio/fart-01.mp3">
+                            Your browser does not support the
+                            <code>audio</code> element.
+                    </audio>
+                </figure> 
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <ul class="social-icons">
-                    <li><a class="facebook" href="https://www.facebook.com/SuttonElectricalServices/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>   
-                </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <figure>
+                    <figcaption class="mb-3">Want to play a burp sound? Click me!</figcaption>
+                    <audio
+                        controls
+                        src="assets/audio/burp-01.mp3">
+                            Your browser does not support the
+                            <code>audio</code> element.
+                    </audio>
+                </figure> 
             </div>
         </div>
     </div>
