blakes page image & sounds added

--- a/blake.html
+++ b/blake.html
@@ -1,1 +1,202 @@
-<h1>This'll be Blake's page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scripts/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <title>Sutton Electrical Services</title>
+</head>
+<body>
+
+    <header class="header-area">
+    <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container">
+            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+            </button>
+
+            <div id="main-nav" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li>
+                        <a href="index.html" class="nav-item nav-link active">
+                            <i class="fas fa-home"></i>
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Kids Page</a>
+                        <div class="dropdown-menu">
+                            <a href="blake.html" class="dropdown-item">Blakes Page</a>
+                            <a href="kian.html" class="dropdown-item">Kians page</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="kidsheader">
+        <h1>
+        This is Blakes website
+        </h1>
+    </div>
+</header>
+<!-- Page colour pickers -->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="footertitle mt-3 text-center"><strong>Blake wants his website to be</strong></h2>
+            <div class="d-flex justify-content-center">
+                <button class="colourbtn pt-2 pb-2" id="redbtn">Red</button>
+                <button class="colourbtn pt-2 pb-2" id="bluebtn">Blue</button>
+                <button class="colourbtn pt-2 pb-2" id="greenbtn">Green</button>
+                <button class="colourbtn pt-2 pb-2" id="orangebtn">Orange</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Some stuff about Blake section -->
+<div class="card text-center mt-3 pt-3">
+  <h5 class="card-header">About Blake</h5>
+  <div class="card-body">
+    <h5 class="card-title">Where do we start?</h5>
+        <p class="card-text">I am Blake. I love horror characters. these are my favourite characters. I collect the Toony terror figures. I like playing Luigi's mansion 3 on Nintendo switch and jumping on my trampoline. 
+        I also like horror costumes and dressing up. I like Friday 13th because strange things happen on that day. I also love colouring in pictures.
+        <br><br>
+        My bedroom is scary with lots of horror pictures and also i keep my figures there. My play room is fun and full of toys and I have graffiti pictures in there. 
+
+</p>
+    <a href="#" class="btn button-primary">Go to Blake's quiz</a>
+  </div>
+</div>
+<!-- Things I like section -->
+<h1 class="text-center mt-3">Things I like</h1>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">    
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col">
+                    <img src="assets/images/freddie1.png" alt="freddie kruger">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><strong>Freddie Kruger</strong></h5><br><br>
+                            <p class="card-text">Freddie Kruger from A Nightmare on Elm Street has razor sharp hands and wears a stripey jumper.</p>
+                            <br>
+                            <br>
+                            He comes to people in their dreams and turns real through their dreams.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Freddie Kruger sounds -->
+        <div class="col-md-4">
+        <figure class="mt-3">
+            <figcaption class="mb-3">Play a Freddie Kruger sound? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/call-freddy.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/down.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/running.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure> 
+        </div>
+    </div>
+</div>
+
+<!-- Site footer -->
+<footer class="site-footer mt-3 text-center">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6 class="footertitle"><strong>About Blake</strong></h6>
+                <p class="text-justify">Blake is a really funny guy who likes all things horrible!
+                <br><br>
+                For Blake, the scarier it is the better it is. The more terrifying and terrible something can be is a happy thing for Blake.<p>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+                <h6 class="footertitle"><strong>Go To</strong></h6>
+                    <ul class="footer-links">
+                        <li><a href="blake.html">Blake's page</a></li>
+                        <li><a href="kian.html">Kian's page</a></li>
+                    </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <figure>
+                    <figcaption class="mb-3">Want to play a fart sound? Press play!</figcaption>
+                    <audio
+                        controls
+                        src="assets/audio/fart-01.mp3">
+                            Your browser does not support the
+                            <code>audio</code> element.
+                    </audio>
+                </figure> 
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <figure>
+                    <figcaption class="mb-3">Want to play a burp sound? Press play!</figcaption>
+                    <audio
+                        controls
+                        src="assets/audio/burp-01.mp3">
+                            Your browser does not support the
+                            <code>audio</code> element.
+                    </audio>
+                </figure> 
+            </div>
+        </div>
+    </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</footer>
+
+<script src="scripts/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
