--- a/kian.html
+++ b/kian.html
@@ -64,7 +64,7 @@
         <div class="col">
             <p>
                 <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <i class="fas fa-shield-virus"></i>Kian, click me!
+                    Kian, click me!
                 </button>
             </p>
             <div class="collapse" id="collapseExample">
@@ -96,10 +96,10 @@
             <div class="col-xs-6 col-md-3">
                 <h6 class="footertitle"><strong>Kian Likes</strong></h6>
                     <ul class="footer-links">
-                        <li><button class="colourbtn" id="redbtn">Red</button></li>
-                        <li><button class="colourbtn" id="bluebtn">Blue</button></li>
-                        <li><button class="colourbtn" id="greenbtn">Green</button></li>
-                        <li><button class="colourbtn" id="orangebtn">Orange</button></li>
+                        <li><button class="colourbtn pb-2" id="redbtn">Red</button></li>
+                        <li><button class="colourbtn pb-2" id="bluebtn">Blue</button></li>
+                        <li><button class="colourbtn pb-2" id="greenbtn">Green</button></li>
+                        <li><button class="colourbtn pb-2" id="orangebtn">Orange</button></li>
                     </ul>
             </div>
 
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col">
                 <figure>
-                    <figcaption class="mb-3">Want to play a fart sound? Click me!</figcaption>
+                    <figcaption class="mb-3">Want to play a fart sound? Press play!</figcaption>
                     <audio
                         controls
                         src="assets/audio/fart-01.mp3">
@@ -132,7 +132,7 @@
         <div class="row">
             <div class="col">
                 <figure>
-                    <figcaption class="mb-3">Want to play a burp sound? Click me!</figcaption>
+                    <figcaption class="mb-3">Want to play a burp sound? Press play!</figcaption>
                     <audio
                         controls
                         src="assets/audio/burp-01.mp3">
