--- a/blake.html
+++ b/blake.html
@@ -20,7 +20,7 @@
     </script>
     <title>Sutton Electrical Services</title>
 </head>
-<body>
+<body class="animate__animated animate__rubberBand">
 
     <header class="header-area">
     <nav class="navbar navbar-expand-md navbar-dark">
@@ -50,14 +50,14 @@
         </div>
     </nav>
 
-    <div class="kidsheader">
+    <div class="kidsheader wow animate__animated animate__hinge">
         <h1>
         This is Blakes website
         </h1>
     </div>
 </header>
 <!-- Page colour pickers -->
-<div class="container">
+<div class="container wow animate__animated animate__swing">
     <div class="row">
         <div class="col-12">
             <h2 class="footertitle mt-3 text-center"><strong>Blake wants his website to be</strong></h2>
@@ -71,7 +71,7 @@
     </div>
 </div>
 <!-- Some stuff about Blake section -->
-<div class="card text-center mt-3 pt-3">
+<div class="card text-center mt-3 pt-3 wow animate__animated animate__rubberBand">
   <h5 class="card-header">About Blake</h5>
   <div class="card-body">
     <h5 class="card-title">Where do we start?</h5>
@@ -81,13 +81,13 @@
         My bedroom is scary with lots of horror pictures and also i keep my figures there. My play room is fun and full of toys and I have graffiti pictures in there. 
 
 </p>
-    <a href="#" class="btn button-primary">Go to Blake's quiz</a>
+    <a href="#quiz" class="btn button-primary">Go to Blake's quiz</a>
   </div>
 </div>
 <!-- Things I like section -->
-<h1 class="text-center mt-3">Things I like</h1>
+<h1 class="text-center mt-3 wow animate__animated animate__swing">Things I like</h1>
 
-<div class="container">
+<div class="container wow animate__animated animate__swing">
     <div class="row">
         <div class="col-md-8">    
             <div class="card mb-3">
@@ -98,7 +98,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Freddie Kruger</strong></h5><br><br>
-                            <p class="card-text">Freddie Kruger from A Nightmare on Elm Street has razor sharp hands and wears a stripey jumper.</p>
+                            <p class="card-text">Freddie Kruger from A Nightmare on Elm Street has razor sharp hands and wears a stripy jumper.</p>
                             <br>
                             <br>
                             He comes to people in their dreams and turns real through their dreams.
@@ -108,7 +108,7 @@
             </div>
         </div>
         <!-- Freddie Kruger sounds -->
-        <div class="col-md-4">
+        <div class="col-md-4 wow animate__animated animate__rotateIn">
         <figure class="mt-3">
             <figcaption class="mb-3">Play a Freddie Kruger sound? Press play!</figcaption>
             <audio
@@ -140,8 +140,119 @@
     </div>
 </div>
 
+<div class="container mt-3 pt-3 wow animate__animated animate__swing">
+    <div class="row">
+        <!-- Scream sounds -->
+        <div class="col-md-4">
+        <figure class="mt-3">
+            <figcaption class="mb-3">Play an actual scream? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/scream1.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/scream2.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/scream3.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure> 
+        </div>
+        <div class="col-md-8 wow animate__animated animate__swing">    
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col">
+                    <img src="assets/images/ftt1.jpg" alt="jason">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><strong>Scream</strong></h5><br><br>
+                            <p class="card-text">A classic horror film with the masked lunatic terrifying people wherever he goes.</p>
+                            <br>
+                            <br>
+                            His aim is to scare people and he does this by wearing the most terrifying mask you can think of.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container wow animate__animated animate__swing">
+    <div class="row">
+        <!-- Friday the 13th -->
+        <div class="col-md-8">    
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col">
+                    <img src="assets/images/jason.png" alt="freddie kruger">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><strong>Jason</strong></h5><br><br>
+                            <p class="card-text">Jason is from Friday the 13th, the scariest day ever. He's a maniac so be careful on this day!</p>
+                            <br>
+                            <br>
+                            He has a giant knife and uses it ALL OF THE TIME!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Jason sounds -->
+        <div class="col-md-4 wow animate__animated animate__rotateIn">
+        <figure class="mt-3">
+            <figcaption class="mb-3">Play a Jason sound? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/jason1.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/jason2.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>
+        <figure class="mt-3">
+            <figcaption class="mb-3">And another? Press play!</figcaption>
+            <audio
+                controls
+                src="assets/audio/jason3.mp3">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure> 
+        </div>
+    </div>
+</div>
+
+<!-- Quiz section -->
+<h1 class="text-center mt-3 wow animate__animated animate__swing" id="quiz">Blake's quiz</h1>
+
+
 <!-- Site footer -->
-<footer class="site-footer mt-3 text-center">
+<footer class="site-footer mt-3 text-center wow animate__animated animate__rotateIn">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
